--- a/style.css
+++ b/style.css
@@ -152,3 +152,43 @@ article{
     flex-direction: row;
     
 }
+
+/* MEDIA */
+
+@media screen and (max-width : 1024px){
+    body{
+        background: yellow;
+        max-width: 1024px;
+        
+    }    
+    .presentation{
+        display : flex;
+        flex-direction: column;
+    }
+
+}   
+
+@media screen and (max-width : 415px){
+    body {
+        background : red;
+    
+    }
+    header{
+        background-image: url(dark-wood-texture-2210x1475.jpg) center;
+    }
+    h1{
+        color: rgb(236, 235, 235);
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 1em;
+        margin: 1%;
+    }
+  
+    .presentation{
+        display : flex;
+        flex-direction: column;
+    }
+    p{
+    
+    }
+}
