--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ font-family: 'Maven Pro', sans-serif;
 body{
     font-family: 'Maven Pro', sans-serif;
 }
-
+/*HEADER*/
 header{
     font-family: 'Permanent Marker', cursive;
     background-image: url(dark-wood-texture-2210x1475.jpg);
@@ -50,6 +50,7 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: ease-in 1s rgba(255, 255, 255, 0.144);
 }
 
 .profil{
@@ -76,8 +77,10 @@ button{
     width : 10%;
     margin: 1%;
     border-radius: 5%;
+   }
 
-}
+
+
 
 a:hover{
     color: white;
@@ -85,7 +88,10 @@ a:hover{
 
 a:visited{
     color: rgb(87, 9, 212);
+
 }
+
+/*PRESENTATION*/
 
 .presentation{
     display: flex;
@@ -99,7 +105,7 @@ p{
     padding: 2%;
 }
 
-
+/* FORMULAIRE*/
 .form{
     display: flex;
     justify-content: space-around;
@@ -135,6 +141,10 @@ textarea{
     border-radius: 10%;
     padding: 2%;
 }
+.controle{
+    display: flex;
+    flex-direction: column;
+}
 
 
 
@@ -154,20 +164,42 @@ article{
 }
 
 /* MEDIA */
-
+/* IPAD PRO ET IPAD*/
 @media screen and (max-width : 1024px){
     body{
         background: yellow;
         max-width: 1024px;
         
     }    
+
+    .header{
+        max-width: 1024px;
+    }
     .presentation{
         display : flex;
         flex-direction: column;
+
     }
 
+    form{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+
+    label,legend,input{
+        display: block;
+        text-align: center;
+    }
+
+   
 }   
 
+
+
+/*GRAND SMARTPHONE*/
 @media screen and (max-width : 415px){
     body {
         background : red;
@@ -175,6 +207,7 @@ article{
     }
     header{
         background-image: url(dark-wood-texture-2210x1475.jpg) center;
+        max-width: 415px;
     }
     h1{
         color: rgb(236, 235, 235);
@@ -183,12 +216,49 @@ article{
         font-size: 1em;
         margin: 1%;
     }
+    .cv{
+        width : 23%
+    }
   
     .presentation{
         display : flex;
         flex-direction: column;
     }
-    p{
     
+    .form{
+        display: flex;
+        flex-direction: column;
     }
 }
+
+/*SMARTPHONE*/
+@media screen and (max-width : 375px){
+    body{
+        background: chartreuse;
+    }
+
+}
+
+h1{
+    color: rgb(236, 235, 235);
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1em;
+    margin: 1%;
+}
+.cv{
+    width : 23%
+}
+
+.presentation{
+    display : flex;
+    flex-direction: column;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+}
+
+}
+
