--- a/style.css
+++ b/style.css
@@ -6,18 +6,24 @@
 
 /*
 font :
-font-family: 'Permanent Marker', cursive;
-font-family: 'Kaushan Script', cursive;
-font-family: 'Maven Pro', sans-serif;
+
+font-family: 'Sriracha', cursive;
+font-family: 'Amiri', serif;
+
+color : 
+
+color: rgb(87, 9, 212) >>> lien visité
+background: rgb(2, 39,49); bleu 
+color:rgb(247, 185, 41); jaune
 */
 
 body{
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Amiri', serif;  
 }
 /*HEADER*/
 header{
-    font-family: 'Permanent Marker', cursive;
-    background: rgb(67, 112, 112);
+    font-family: 'Sriracha', cursive;
+    background: rgb(2, 39, 49);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -25,7 +31,7 @@ header{
 }
 
 h1{
-    color: rgb(236, 235, 235);
+    color:rgb(233, 199, 119);
     display: flex;
     justify-content: center;
     align-content: center;
@@ -33,16 +39,17 @@ h1{
     padding: 2%;
 }
 h2{
-    font-family: 'Permanent Marker', cursive;
-    margin: 2%;
-    padding: 1%;
+    color: rgb(233, 199, 119);
+    font-family: 'Sriracha', cursive;
     display: flex;
-    align-items: flex-start;
+    justify-content: center;
+    background: rgb(2, 39, 49);
 }
+
 
 a{
     text-decoration: none;
-    color:black;
+    color : rgb(233, 199, 119); 
 }
 
 .image{
@@ -66,38 +73,34 @@ ul{
     padding: 1%;
 }
 li{
-    background: rgb(6, 148, 184);
-    border: rgb(6, 100, 124) solid 1px;
-    border-bottom-right-radius: 25%;
-    padding: 1%;
-    margin: 1%;
+    
+    padding : 1%;
+    margin : 1%;
+    border-radius: 30px;
+    background: linear-gradient(145deg, #02232c, #022a34);
+    box-shadow: 30px 30px 60px #011217, 
+            -30px -30px 60px #033c4b;
+    
 }
 
-button{
-    width : 10%;
-    margin: 1%;
-    border-radius: 5%;
-   }
 
 
 
-
-a:hover{
-    color: white;
-}
 
 a:visited{
-    color: rgb(87, 9, 212);
+    color:blanchedalmond;
 
 }
 
 /*PRESENTATION*/
 
 .presentation{
+   background:rgb(228, 226, 220);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 2%;
+    padding : 2%;
+/*margin: 2%;*/
 }
 
 
@@ -107,66 +110,138 @@ p{
 }
 
 .pdroite{
-    background: rgb(236, 234, 234);
+    background: rgb(2,39,49);
+    color: rgb(236, 234, 234);
     border-radius: 10%;
 }
 
-/* FORMULAIRE*/
-.form{
+/* FOOTER*/
+
+.contact{
     display: flex;
     justify-content: space-around;
-    background: rgb(212, 211, 211);
+    background: rgb(2,39,49);
+    
   
 }
 
-table{
+
+.coordonnees{
     display: flex;
     justify-content: center;
     align-items: center;    
+    color: rgb(236, 234, 234)
+}
+
+
+form {
+    width : 40% ;
+    display : flex;
     
 }
 
-form{
+.champs{
+    
+    padding-right : 5%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    color: rgb(236, 234, 234)
+    
+}
+
+input {
     padding: 2%;
+    border-radius: 50px;
+    background: linear-gradient(145deg, #022a34, #02232c);
+    box-shadow: 30px 30px 29px #011b22, 
+                -30px -30px 29px #033340;
 }
 
-legend{
-    margin: 1%;
-    padding: 1%;
+input::placeholder{
+   text-align: center;
+   color: rgb(236, 234, 234)
 }
-
-label{
-    display : block;
+.formulaire{ /* >>>> gère le textarea + input */
+    display : flex ;
+    flex-direction: row;
     
 }
 
 textarea{
-    border-radius: 10%;
-    padding: 2%;
+    border-radius: 30px;
+    background: linear-gradient(145deg, #fdfafa, #d4d3d3);
+    box-shadow: 30px 30px 60px #01171d, 
+                -30px -30px 60px #033745;
+    margin-top: 5%;
+    margin-bottom: 5% ;
+    padding : 2%;
+    text-align: center;
 }
-.controle{
-    display: flex;
+
+textarea::placeholder {
+    text-align: center;
+}
+
+.bouton {
+    width : 25%;
+    display : flex;
     flex-direction: column;
+    justify-content: center;
+    margin-left : 5%; 
+    
 }
+
+.reset{
+  margin : 20%
+}
+
+input[type="reset"], input[type="submit"]{
+    color: rgb(236, 234, 234);
+}
+
+/* ANIMATION */
+
+@media(hover: hover ){
+    
+    a:hover{
+        color : rgb(2,39,49);
+    }
+
+    li:hover{
+        border-radius: 25px;
+        background: linear-gradient(145deg, #d2b36b, #f9d57f);
+        box-shadow: 30px 30px 60px #6e5e38, 
+                    -30px -30px 60px #ffffb6;
+        
+    }
+
+    input::placeholder:hover{
+        color : rgb(2,39,49);
+    }
+    input:hover{
+        border-radius: 25px;
+        background: linear-gradient(145deg, #d4d3d3, #fdfafa);
+        box-shadow: 30px 30px 60px #6f6e6e, 
+                    -30px -30px 60px #ffffff;
+    }
+
+    
+}
+
+
+
+
+
+    
+    
+  
 
 
 
 /* Parcours*/
 
 
-.articles{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-}
-
-article{
-    display: flex;
-    flex-direction: row;
-    
-}
 
 /* MEDIA */
 /* IPAD PRO ET IPAD*/
