--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ color :
 
 color: rgb(87, 9, 212) >>> lien visité
 background: rgb(2, 39,49); bleu 
-color:rgb(247, 185, 41); jaune
+color:rgb(233, 119, 119); jaune
 */
 
 body{
@@ -38,18 +38,44 @@ h1{
     text-transform: uppercase;
     padding: 2%;
 }
+
+.tracking-in-expand {
+	-webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+ @-webkit-keyframes tracking-in-expand {
+    0% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes tracking-in-expand {
+    0% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  
 h2{
     color: rgb(233, 199, 119);
     font-family: 'Sriracha', cursive;
     display: flex;
     justify-content: center;
     background: rgb(2, 39, 49);
-}
-
-
-a{
-    text-decoration: none;
-    color : rgb(233, 199, 119); 
 }
 
 .image{
@@ -64,6 +90,12 @@ a{
     width: 13%;
 }
 
+a{
+    text-decoration: none;
+    color : rgb(233, 199, 119); 
+}
+
+
 
 ul{
     list-style-type: none;
@@ -76,10 +108,10 @@ li{
     
     padding : 1%;
     margin : 1%;
-    border-radius: 35px;
+    border-radius: 20px;
     background: linear-gradient(145deg, #02232c, #022a34);
     box-shadow: 30px 30px 60px #011217, 
-            -30px -30px 60px #033c4b;
+                -30px -30px 60px #033c4b;
     
 }
 
@@ -114,6 +146,44 @@ p{
     color: rgb(236, 234, 234);
     border-radius: 10%;
 }
+.swing-in-right-fwd {
+	-webkit-animation: swing-in-right-fwd 1s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+	animation: swing-in-right-fwd 1s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+}
+
+ @-webkit-keyframes swing-in-right-fwd {
+    0% {
+      -webkit-transform: rotateY(-100deg);
+              transform: rotateY(-100deg);
+      -webkit-transform-origin: right;
+              transform-origin: right;
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: rotateY(0);
+              transform: rotateY(0);
+      -webkit-transform-origin: right;
+              transform-origin: right;
+      opacity: 1;
+    }
+  }
+  @keyframes swing-in-right-fwd {
+    0% {
+      -webkit-transform: rotateY(-100deg);
+              transform: rotateY(-100deg);
+      -webkit-transform-origin: right;
+              transform-origin: right;
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: rotateY(0);
+              transform: rotateY(0);
+      -webkit-transform-origin: right;
+              transform-origin: right;
+      opacity: 1;
+    }
+  }
+  
 
 /* FOOTER*/
 
@@ -237,8 +307,17 @@ input[type="reset"], input[type="submit"]{
 
 main{
     background : rgb(228, 226, 220);
+
+       
 }
 
+article{
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
 i{
     color : rgb(233, 199, 119);
 
@@ -246,24 +325,77 @@ i{
 
 /*ANIMATIONS*/
 
-.animation:hover{
-    animation : mouv 2s ease-in 1s initial;
+/*
+ * ----------------------------------------
+ * animation slide-in-left
+ * ----------------------------------------
+ */
+
+ .slide-in-left {
+	-webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-@keyframes mouv {
-    
-    from{
-        margin-left: 100%;
-        width : 100%;
+ @-webkit-keyframes slide-in-left {
+    0% {
+      -webkit-transform: translateX(-1000px);
+              transform: translateX(-1000px);
+      opacity: 0;
     }
-
-    to{
-      margin-left : 50%;
-      width: 100%;
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
     }
-
+  }
+  @keyframes slide-in-left {
+    0% {
+      -webkit-transform: translateX(-1000px);
+              transform: translateX(-1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+/**
+ * ----------------------------------------
+ * animation slide-in-right
+ * ----------------------------------------
+ */
+  .slide-in-right {
+	-webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+ @-webkit-keyframes slide-in-right {
+    0% {
+      -webkit-transform: translateX(1000px);
+              transform: translateX(1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slide-in-right {
+    0% {
+      -webkit-transform: translateX(1000px);
+              transform: translateX(1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+  
 
 /* Portfolio */
 
