--- a/style.css
+++ b/style.css
@@ -1,523 +1,223 @@
-*{
-    margin : 0;
-    padding : 0;
-    box-sizing: border-box;
-}
-
 /*
-font :
-
-font-family: 'Sriracha', cursive;
-font-family: 'Amiri', serif;
+font h1-h2-navbar : font-family: 'Righteous', cursive;
+font p  : font-family: 'Gotu', sans-serif;
 
 color : 
 
-color: rgb(87, 9, 212) >>> lien visité
-background: "138086"; bleu 
-color:#EEB462; jaune
 */
 
-body{
-    font-family: 'Amiri', serif;  
+*{
+  margin : 0;
+  padding : 0;
+  color:white;
+  font-family:'Gotu', sans-serif;;
 }
-/*HEADER*/
+body {
+  background: rgb(9, 6, 44);
+}
+
+
+/* ###-HEADER-### */
+
 header{
-    font-family: 'Lexend Giga', sans-serif;
-    background: rgb(228, 226, 220);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
+  padding : 5em;
 }
 
 h1{
-   
-  width : 900px;
-
-background: #F8D90F;
-box-shadow: inset 20px 20px 60px #d3b80d, 
-            inset -20px -20px 60px #fffa11;
-    color : black;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    text-transform: uppercase;
-    margin-left : 20%;
-    margin-top: 5%;
-    padding: 2%;
-    
-}
-
-.tracking-in-expand {
-	-webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-}
-
- @-webkit-keyframes tracking-in-expand {
-    0% {
-      letter-spacing: -0.5em;
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes tracking-in-expand {
-    0% {
-      letter-spacing: -0.5em;
-      opacity: 0;
-    }
-    40% {
-      opacity: 0.6;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-
-.NameImg{
-  margin-top : 2%;
-  width : 400px;
-  height : 400px;
-  
-  
-  box-shadow:  5px 5px 5px #106d72, 
-             -5px -5px 5px #16939a;
+  width : 80%;
+  font-family: 'Righteous', cursive;
+  display: flex;
+  justify-content: flex-end;
+  border-radius: 10px;
+  padding : 0.5em;
+  Font-size : 100px;
+  text-transform: uppercase;
   
 }
-  
+
+
+
+
+
 h2{
-
-    padding-top : 2em;
-    color: #F8D90F;
-    font-family: 'Lexend Giga', sans-serif;
-    display: flex;
-    justify-content : center;
-    
-}
-
-.image{
-    width : 400px;
-    height : 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: ease-in 1s rgba(255, 255, 255, 0.144);
-}
-
-.profil{
-    width: 75%;
+  padding : 1.5em;
+  display : flex;
+  font-size : 75px;
+  justify-content : flex-end;
+  font-family: 'Righteous', cursive;
 }
 
 a{
-    text-decoration: none;
-    color : #35BBCA; 
+  text-decoration: none;
+ 
 }
+.name {
+  font-family: 'Righteous', cursive;
 
-
+}
+.name:hover{
+  color : rgb(9, 6, 44);
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow:  14px 14px 5px #d9d9d9, 
+             -14px -14px 5px #ffffff;
+}
 
 
 ul{
-  
-margin-left : 25%;
-box-shadow:  2px 2px 10px #000000, 
-             2px 2px 10px #000000;
-    border : 1px #000000 solid;
-    width :  75%;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 1%;
+
+list-style-type: none;
+display: flex;
+flex-direction: row;
+justify-content: center;
+margin-top:6em;
 }
+
 li{
-    
-    padding : 1%;
-    margin : 1%;
-    
-    
+  padding : 1em;
+  
+}
+
+.linkNavbar{
+  font-family: 'Righteous', cursive;
+  font-size: 30px;
+}
+
+.linkNavbar:hover{
+  color : rgb(9, 6, 44);
+  border-radius: 1px;
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow:  5px 5px 3px #d9d9d9, 
+             -5px -5px 3px #ffffff;
+
 }
 
 
-
-
-a:visited{
-    color:blanchedalmond;
-
-}
-
-/*PRESENTATION*/
+/* ###-MAIN-### */
 
 .presentation{
-   background:rgb(228, 226, 220);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding : 2%;
-/*margin: 2%;*/
+  padding : 1.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
-
-
 
 p{
-    padding: 2%;
+  padding : 2em;
+  
 }
 
-.pdroite{
-    background: rgb(2,39,49);
-    color: rgb(236, 234, 234);
-    border-radius: 10%;
-}
-.swing-in-right-fwd {
-	-webkit-animation: swing-in-right-fwd 1s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
-	animation: swing-in-right-fwd 1s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
-}
-
- @-webkit-keyframes swing-in-right-fwd {
-    0% {
-      -webkit-transform: rotateY(-100deg);
-              transform: rotateY(-100deg);
-      -webkit-transform-origin: right;
-              transform-origin: right;
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: rotateY(0);
-              transform: rotateY(0);
-      -webkit-transform-origin: right;
-              transform-origin: right;
-      opacity: 1;
-    }
-  }
-  @keyframes swing-in-right-fwd {
-    0% {
-      -webkit-transform: rotateY(-100deg);
-              transform: rotateY(-100deg);
-      -webkit-transform-origin: right;
-              transform-origin: right;
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: rotateY(0);
-              transform: rotateY(0);
-      -webkit-transform-origin: right;
-              transform-origin: right;
-      opacity: 1;
-    }
-  }
+.description{
+  
+  width : 40%;
+  display: flex;
+  flex-direction: column;
   
 
-/* FOOTER*/
+}
+
+.candidature{
+  padding :  1.5em;
+  color : rgb(9, 6, 44);
+  border-radius: 1px;
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow:  5px 5px 2px #d9d9d9, 
+               -5px -5px 2px #ffffff;
+  height: 30%;
+  width : 20%;
+  display: flex;
+  align-items: center;
+}
+
+/* ###-FOOTER-### */
 
 .contact{
-    display: flex;
-    justify-content: space-around;
-    background: rgb(2,39,49);
-
-    
-  
+  display: flex;
+  flex-direction : row;
+  justify-content : space-around;
+  align-self: center;
 }
-
 
 .coordonnees{
-    margin : 2%;
-    display: flex;
-    justify-content: center;
-    align-items: center;    
-    color: rgb(236, 234, 234)
-}
-
-
-form {
-    width : 25% ;
-    display : flex;
-    
+  padding : 1.5em;
+  display : flex ;
+  align-self: center;
+  font-size : 2em;
 }
 
 .champs{
-    
-    padding-right : 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: rgb(236, 234, 234)
-    
+  display: flex;
+  flex-direction: column;
 }
 
-input {
-    padding: 2%;
-    border-radius: 50px;
-    background: linear-gradient(145deg, #022a34, #02232c);
-    box-shadow: 30px 30px 29px #011b22, 
-                -30px -30px 29px #033340;
+label{
+  padding : 0 1.5em 0.5em 0;
+  display: flex;
+  justify-content: center;
 }
 
-input::placeholder{
+input{
+  color : rgb(9, 6, 44);
+}
+
+::placeholder{
    text-align: center;
-   color: rgb(236, 234, 234)
-}
-.formulaire{ /* >>>> gère le textarea + input */
-    display : flex ;
-    flex-direction: row;
-    
 }
 
 textarea{
-    border-radius: 30px;
-    background: linear-gradient(145deg, #fdfafa, #d4d3d3);
-    box-shadow: 30px 30px 60px #01171d, 
-                -30px -30px 60px #033745;
-    margin-top: 5%;
-    margin-bottom: 5% ;
-    padding : 2%;
-    text-align: center;
+  color : rgb(9, 6, 44);
 }
 
-textarea::placeholder {
-    text-align: center;
-}
-
-.bouton {
-    width : 25%;
-    display : flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left : 5%; 
-    
-}
-
-.reset{
-  margin : 20%
-}
-
-input[type="reset"], input[type="submit"]{
-    color: rgb(236, 234, 234);
-}
-
-/* TRANSITION */
-
-@media(hover: hover ){
-    
-    a:hover{
-        color : rgb(2,39,49);
-    }
-
-    li:hover{
-        border-radius: 35px;
-        background: linear-gradient(145deg, #d2b36b, #f9d57f);
-        box-shadow: 30px 30px 60px #6e5e38, 
-                    -30px -30px 60px #ffffb6;
-        
-    }
-
-    input::placeholder:hover{
-        color : rgb(2,39,49);
-    }
-    input:hover{
-        border-radius: 30px;
-        background: linear-gradient(145deg, #d4d3d3, #fdfafa);
-        box-shadow: 30px 30px 60px #6f6e6e, 
-                    -30px -30px 60px #ffffff;
-    }
-
-    
+.bouton{
+  display: flex;
+  justify-content: space-around;
+  padding-top : 2em
 }
 
 
-
-/* Parcours */
-
-main{
-    background : rgb(228, 226, 220);
-
-       
+.button{
+  color : rgb(9, 6, 44);
+  width : 5em;
 }
 
-article{
-    display : flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
+.button:hover{
+color : rgb(9, 6, 44);
+border-radius: 0px;
+background: #ffffff;
+box-shadow:  5px 5px 2px #ababab, 
+             -5px -5px 2px #ffffff;
 }
-i{
-    color : rgb(233, 199, 119);
-
-}
-
-/*ANIMATIONS*/
-
-/*
- * ----------------------------------------
- * animation slide-in-left
- * ----------------------------------------
- */
-
- .slide-in-left {
-	-webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+.plan{
+  padding : 2em ;
+  display: flex;
+  flex-direction : column;
+  align-items: center;
 }
 
- @-webkit-keyframes slide-in-left {
-    0% {
-      -webkit-transform: translateX(-1000px);
-              transform: translateX(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
-    }
-  }
-  @keyframes slide-in-left {
-    0% {
-      -webkit-transform: translateX(-1000px);
-              transform: translateX(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
-    }
-  }
+/* ###-ANIMATION-### */ 
+
+.text-shadow-drop-bl {
+	-webkit-animation: text-shadow-drop-bl 1s ;
+	        animation: text-shadow-drop-bl 1s ;
+}
+
 /**
  * ----------------------------------------
- * animation slide-in-right
+ * @animation text-shadow-drop-bl
  * ----------------------------------------
  */
-  .slide-in-right {
-	-webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-
- @-webkit-keyframes slide-in-right {
-    0% {
-      -webkit-transform: translateX(1000px);
-              transform: translateX(1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
-    }
+ @-webkit-keyframes text-shadow-drop-bl {
+  0% {
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
   }
-  @keyframes slide-in-right {
-    0% {
-      -webkit-transform: translateX(1000px);
-              transform: translateX(1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
-    }
+  100% {
+    text-shadow: -6px 6px 18px rgba(0, 0, 0, 0.35);
   }
-  
-  
-
-/* Portfolio */
-
-/* MEDIA */
-/* IPAD PRO ET IPAD*/
-@media screen and (max-width : 1024px){
-    body{
-        background: yellow;
-        max-width: 1024px;
-        
-    }    
-
-    .header{
-        max-width: 1024px;
-    }
-    .presentation{
-        display : flex;
-        flex-direction: column;
-
-    }
-
-    form{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
-
-
-    label,legend,input{
-        display: block;
-        text-align: center;
-    }
-
-   
-}   
-
-
-
-/*GRAND SMARTPHONE*/
-@media screen and (max-width : 415px){
-    body {
-        background : red;
-    
-    }
-    header{
-        background-image: url(dark-wood-texture-2210x1475.jpg) center;
-        max-width: 415px;
-    }
-    h1{
-        color: rgb(236, 235, 235);
-        text-transform: uppercase;
-        text-align: center;
-        font-size: 1em;
-        margin: 1%;
-    }
-    .cv{
-        width : 23%
-    }
-  
-    .presentation{
-        display : flex;
-        flex-direction: column;
-    }
-    
-    .form{
-        display: flex;
-        flex-direction: column;
-    }
 }
-
-/*SMARTPHONE*/
-@media screen and (max-width : 375px){
-    body{
-        background: chartreuse;
-    }
-
-h1{
-    color: rgb(236, 235, 235);
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 1em;
-    margin: 1%;
+@keyframes text-shadow-drop-bl {
+  0% {
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    text-shadow: -6px 6px 18px rgba(0, 0, 0, 0.35);
+  }
 }
-.cv{
-    width : 23%
-}
-
-.presentation{
-    display : flex;
-    flex-direction: column;
-}
-
-.form{
-    display: flex;
-    flex-direction: column;
-}
-
-}
-
