--- a/style.css
+++ b/style.css
@@ -179,6 +179,14 @@ span{
 
 
 
+/* ### -- PAGE PORTFOLIO --- ### */
+
+.categorie{
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+}
+
 
 /* ###-FOOTER-### */
 
@@ -246,8 +254,6 @@ box-shadow:  5px 5px 2px #ababab,
   flex-direction : column;
   align-items: center;
 }
-
-
 
 
 
